	sized character arrays.

	* src/eval.c src/datafile.h src/datafile.c docs/gnuplot.doc:
	New internal function f_stringcolumn() usable only inside a "using"
	specification; pushes the content of a data column onto the evaluation
	stack as a string variable.
	Syntax:
	    plot 'foo' using (stringcolumn(1) eq "baz" ? column(2) : column(3))

2005-03-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/unset.c (unset_historysize): Rearrange #ifdefs for GNUPLOT_HISTORY
	to prevent compiler warnings about unused function definitions.

	* src/term.h term/post.h term/post.trm: Introduce a statement 
	'#define PSLATEX_DRIVER' into post.h that controls whether or not the
	pslatex/epslatex terminal code is built.  Add #ifdef PSLATEX_DRIVER
	in appropriate places.  Without this it was impossible to build gnuplot
	with post.trm but not pslatex.trm.

	* src/term.h: Remove aed.trm and tek.trm from SHORT_TERMLIST set of
	terminals, but add estimate.trm if it is enabled.

	* configure.in src/graphics.c src/plot2d.c src/save.c src/set.c
	src/show.c src/unset.c src/plot2d.h:

	Remove configuration option --disable-relative-boxwidth. 
	Remove the #ifdef USE_ULIG_RELATIVE_BOXWIDTH ... #endif brackets around
	code that implements it.

	* config/config.amg config/config.cyg config/config.mgw config/config.nt
	config/config.os2 configure.in src/bitmap.c src/datafile.c src/gadgets.c
	src/gplt_x11.c src/gp_types.h src/graphics.c src/misc.c src/plot2d.c
	src/save.c src/show.c src/term_api.h src/term.c src/unset.c
	src/win/wgraph.c term/aquaterm.trm term/cgm.trm term/fig.trm term/gd.trm
	term/mif.trm term/pdf.trm term/post.trm term/svg.trm term/win.trm
	term/x11.trm:

	Remove configuration option --disable-filledboxes
	Remove the #ifdef USE_ULIG_FILLEDBOXES ... #endif brackets around code
	that implements it.

2005-02-28  Ethan Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: EPSLATEX_set_color must be protected by #ifdef PM3D.

2005-02-26  Ethan Merritt  <merritt@u.washington.edu>
